LPS-4831 Backend for supporting flexible workflows for Web Content (generated)
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@37176 05bdf26c-840f-0410-9ced-eb539d925f36